force-app/main/default/objects/Delivery_Parameter__c/Delivery_Parameter__c.object-meta.xml
<CustomObject>
    <description>Used to hold delivery parameters.</description>
    <label>Delivery Parameter</label>
    <nameField>
        <displayFormat>DP-{0}</displayFormat>
        <label>Delivery Parameter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>