force-app/main/default/objects/Delivery_Parameter__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identification of which delivery parameter currently active. if more than one delivery parameter exists for a branch.</description>
    <inlineHelpText>Unchecking this box will turn off this delivery parameter.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>