force-app/main/default/objects/Delivery_Parameter__c/fields/Allow_Multiple_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Allow_Multiple_Attempts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The field stores the information for allowing multiple attempts for the Delivery Object</description>
    <inlineHelpText>Unchecking this box will turn off the multiple attempts based on hung status field value on delivery.</inlineHelpText>
    <label>Allow Multiple Attempts</label>
    <type>Checkbox</type>
</CustomField>