force-app/main/default/objects/Delivery_Parameter__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>Deal won date of the property.</description>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>