force-app/main/default/objects/Delivery_Parameter__c/fields/Create_Date_in_SFDC__c.field-meta.xml
<CustomField>
    <fullName>Create_Date_in_SFDC__c</fullName>
    <description>It holds account created date/time.</description>
    <label>Create Date in SFDC</label>
    <type>Date</type>
</CustomField>