force-app/main/default/objects/Delivery_Parameter__c/fields/Days_Until_Next_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Next_Delivery__c</fullName>
    <description>Used to send next delivery to the customers, if he doesn&apos;t respond for delivery 1 with status Hung.</description>
    <inlineHelpText>Days between this delivery and next if this delivery is completed (Status = Hung). Organizational default value is 7 days.</inlineHelpText>
    <label>Days Until Next Delivery</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>