force-app/main/default/objects/Delivery_Parameter__c/fields/Delivery_Number__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Number__c</fullName>
    <description>Number of delivered counts.</description>
    <label>Delivery Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>