force-app/main/default/objects/Delivery_Parameter__c/fields/Excluded_ZipCodes__c.field-meta.xml
<CustomField>
    <fullName>Excluded_ZipCodes__c</fullName>
    <description>Used to store excluded zip code for a Delivery Parameter.</description>
    <inlineHelpText>Zip codes in the excluded zip codes column will NOT receive deliveries for this delivery number.</inlineHelpText>
    <label>Excluded ZipCodes</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>