force-app/main/default/objects/Delivery_Parameter__c/fields/Included_ZipCodes__c.field-meta.xml
<CustomField>
    <fullName>Included_ZipCodes__c</fullName>
    <description>Used to hold included zipcodes for corresponding Branch in a delivery parameter.</description>
    <label>Included ZipCodes</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>