force-app/main/default/objects/Delivery_Parameter__c/fields/Max_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Max_Sales_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Maximum sales price of the property.</description>
    <label>Max Sales Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>