force-app/main/default/objects/Delivery_Parameter__c/fields/Min_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Min_Sales_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Minimum Sales Price of the property.</description>
    <label>Min Sales Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>