force-app/main/default/objects/Delivery_Parameter__c/fields/Selected_Products__c.field-meta.xml
<CustomField>
    <fullName>Selected_Products__c</fullName>
    <description>Used to store selected products for delivery parameter.</description>
    <inlineHelpText>All selected products will be included in this delivery number. Place the most important delivery at the top of the list to ensure that multiple attempts are made accurately.</inlineHelpText>
    <label>Seleted Products</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>