force-app/main/default/objects/Delivery_Parameter__c/validationRules/MininumAndMaximumPrice_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>MininumAndMaximumPrice_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(Min_Sales_Price__c &gt;  Max_Sales_Price__c, true, false)</errorConditionFormula>
    <errorMessage>Minimum Sales Price shouldn&apos;t be greater than the Maximum Sales Price.</errorMessage>
</ValidationRule>