force-app/main/default/objects/Delivery_Parameter__c/validationRules/Required_Products_on_Delivery_Parameter.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Products_on_Delivery_Parameter</fullName>
    <active>true</active>
    <description>Used to prevent if the delivery parameter is created / updated without any product.</description>
    <errorConditionFormula>AND(OR(ISNEW(), ISCHANGED(Selected_Products__c) ),  ISBLANK(Selected_Products__c))</errorConditionFormula>
    <errorDisplayField>Selected_Products__c</errorDisplayField>
    <errorMessage>Delivery Parameter cannot be saved with no delivery product selected.</errorMessage>
</ValidationRule>